assets/css/index.css
.overallwrap{
  margin: 0;
  padding: 0;
  font-family: 'Handlee', sans-serif, arial;
  color: #222222;
  font-size: 100%;
  /*height: 2000px;*/
  position: relative;
  min-width: 100%;
  background-color: white;
  max-width: 100%;
}


.mcontainer{
  margin: auto;
  width: 100%;
  font-family: 'Amatic SC', sans-serif, arial;
  color: #222222;
  min-width: 100%;
  text-align: center;
}


.fixed-nav-bar {
  position: fixed;
  top: 0;
  left: 0;
  z-index: 9999;
  width: 100%;
  height: 41.5px;
  background-color: #222222;
  font-family: 'Amatic SC', sans-serif, arial;  
  text-transform: uppercase;
  text-align: center;
  font-weight: less bold;
  font-size: 190%;
  letter-spacing: 5px;
  min-width: 100%;
 
}

.nav li{
display:inline;
}

.nav a{
text-decoration:none;
padding: 0 1%;
}

a:link, a:visited{
color:white;
background-color:auto;
text-decoration: none;
}

a:hover{
color:#00d4f2;
}

a:active{
color:#222222;
}

.index-header{
  margin: auto;
  width: 90%;
  min-width: 90%;  
  font-family: 'Amatic SC', sans-serif, arial;
  font-size: 800%;
  color: #00d4f2;
  font-weight: less bold;
  letter-spacing: 45px;
  text-align: center;
  margin-top: 3%;
  margin-left: 7%;
  text-transform: uppercase;
}

.index-subtitle{
  margin: auto;
  width: 100%;
  min-width: 100%;
  font-family: 'Amatic SC', sans-serif, arial;
  font-size: 280%;
  color: #222222;
  letter-spacing: 5px;
  text-align: center;
}


.about-title{
  font-family: 'Amatic SC', sans-serif, arial;
  font-size:700%;
  color: #00d4f2;
  text-transform: uppercase;
  text-align: center;
  letter-spacing: 15px;
  margin-top: 3%;
}

.about-subtitle{
  font-family: 'Amatic SC', sans-serif, arial;
  font-size: 100%;
  color: #00d4f2;
  text-align: center;
  text-transform: uppercase;
  margin-right: 1%;
  letter-spacing: 8px;
  min-width: 10%;
  font-weight: bold;
}

.capture-title{
  font-family: 'Amatic SC', sans-serif, arial;
  font-size:700%;
  color: #00d4f2;
  text-align: center;
  letter-spacing: 30px;
  text-transform: uppercase;
  margin-top: 3%;
  margin-left: 4%;
}

.motion-title{
  font-family: 'Amatic SC', sans-serif, arial;
  font-size:700%;
  color: #00d4f2;
  letter-spacing: 20px;
  text-align: center;
  text-transform: uppercase;
  margin-top: 3%;
}

.contact-title{
  font-family: 'Amatic SC', sans-serif, arial;
  font-size:700%;
  color: #00d4f2;
  letter-spacing: 15px;
  text-align: center;
  text-transform: uppercase;
  margin-top: 3%;
}

.contact-subheader{
  font-family: 'Amatic SC', sans-serif, arial;
  min-width: 100%;
  width: 100%;
  font-size: 200%;
  color: #00d4f2;
  text-align: center;
  text-transform: uppercase;
  letter-spacing: 8px;
  margin-right: 1%;
  font-weight: bold;
}

.subtitlelinks{
  font-family: 'Amatic SC', sans-serif, arial;
  font-size: 90%;
  color: #222222;
  text-align: center;
  margin-right: 1%;
  text-transform: uppercase;
  min-width: 100%;
  width: 100%;
}

.ea{
  font-family: 'Bitter', sans-serif, arial;
  font-size: 130%;
  color: #222222;
  text-align: center;
  text-transform: lowercase;
  margin: auto;
  min-width: 40%;
  width: 40%;
}

.ea2{
  font-family: 'Bitter', sans-serif, arial;
  font-size: 130%;
  color: #222222;
  text-align: center;
  text-transform: lowercase;
  margin: auto;
  min-width: 40%;
  width: 40%;
}

.ea3{
  font-family: 'Bitter', sans-serif, arial;
  font-size: 130%;
  text-align: center;
  text-transform: lowercase;
  margin: auto;
  min-width: 40%;
  width: 40%;
}

.mailchimp{
  font-family: 'Amatic SC', sans-serif, arial;
  font-size: 150%;
  color: #222222;
  text-align: center;
  text-transform: uppercase;
  margin: auto;
  min-width: 10%;
  width: 10%;
}  

.about-photo{
  font-family: 'Amatic SC', sans-serif, arial;
  font-size: 120%;
  color: #222222;
  margin: auto;
  min-width: 100%;
  width: 100%;
  border: white 2px solid;
  text-align: center;
}

.bio{
  font-family: 'Bitter', sans-serif, arial;
  font-size: 90%;
  color: #222222;
  width: 35%;
  min-width: 35%;  
  border: #222222 0px solid;
  margin-left: 25%;
  margin: auto;
  word-spacing: 2px;
}

.livecaptureappreciate{
  font-family: 'Amatic SC', sans-serif, arial;
  font-size: 160%;
  color: #222222;
  text-align: center;
  text-transform: uppercase;
  word-spacing: 5px;
  margin-right: 1%;
}

.kellychauphotography{
  font-family: 'Amatic SC', sans-serif, arial;
  font-size: 200%;
  color: #222222;
  text-align: center;
  text-transform: uppercase;
  word-spacing: 5px;
  margin-right: 1%;
}

.kcplogo{
  text-align: center;
}

.twitter-feed{
  font-family: 'Amatic SC', sans serif, arial;
  font-size: 500%;
  color: #00d4f2;
  letter-spacing: 20px;
  text-align: center;
  text-transform: uppercase;
  float: right;
}

.instagram-feed{
  float: left;
  min-width: 30%;
  max-width: 30%;
  font-family: 'Amatic SC', sans serif, arial;
  font-size: 500%;
  letter-spacing: 20px;
  text-align: center;
  text-transform: uppercase;
  color: #00d4f2
}

.footercontent{
  font-family: 'Amatic SC', sans-serif, arial;
  font-size: 150%;
  color: white;
  text-transform: uppercase;
  text-align: center;
  letter-spacing: 5px;
}

